[tool.poetry]
name = "integer-wavelets"
version = "0.2.0"
description = ""
authors = ["Bruno Petrus <brunoxpetrus@gmail.com>"]
readme = "README.md"
packages = [{include = "wavelets"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
matplotlib = "^3.8.3"
scipy = "^1.13"
setuptools = "^69.2"
pytest = "^8.1.1"
tifffile = "^2024.4.18"
pillow = "^10.2.0"

[tool.poetry.scripts]
wavelets="wavelets.main:main"

[build-system]
required = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
